force-app/main/default/objects/ArdiraSurvey__Question_Result__c/ArdiraSurvey__Question_Result__c.object-meta.xml
<CustomObject>
    <description>The object stores the question responses.</description>
    <label>Ardira Question Result</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>Question Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Question Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>