force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Currency__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Currency__c</fullName>
    <description>Currency response for questions.</description>
    <inlineHelpText>Currency response for a question.</inlineHelpText>
    <label>Answer Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>