force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Date__c</fullName>
    <description>Date response for questions.</description>
    <inlineHelpText>Date response for a question.</inlineHelpText>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>