force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Datetime__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Datetime__c</fullName>
    <description>Date and time response for questions.</description>
    <inlineHelpText>Date and time response for a question.</inlineHelpText>
    <label>Answer Datetime</label>
    <type>DateTime</type>
</CustomField>