force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Email__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Email__c</fullName>
    <description>Email response for questions.</description>
    <inlineHelpText>Email response for a question.</inlineHelpText>
    <label>Answer Email</label>
    <type>Email</type>
</CustomField>