force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Number__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Number__c</fullName>
    <description>Numeric/Decimal responses for questions.</description>
    <inlineHelpText>Numeric/Decimal responses for a question.</inlineHelpText>
    <label>Answer Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>