force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Percentage__c</fullName>
    <description>Percentage response for questions.</description>
    <inlineHelpText>Percentage response for a question.</inlineHelpText>
    <label>Answer Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>