force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Phone__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Phone__c</fullName>
    <description>Phone number response for questions.</description>
    <inlineHelpText>Phone number response for a question.</inlineHelpText>
    <label>Answer Phone</label>
    <type>Phone</type>
</CustomField>