force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Polar__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Polar__c</fullName>
    <description>Response to Polar Yes/No questions translated to True or False.</description>
    <inlineHelpText>Response to a Polar Yes/No question, always stored as True or False.</inlineHelpText>
    <label>Answer Polar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>