force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Rich_Text__c</fullName>
    <description>Rich text response for questions.</description>
    <inlineHelpText>Rich text response for a question.</inlineHelpText>
    <label>Answer Rich Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>