force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Text__c</fullName>
    <description>Text response for questions.</description>
    <inlineHelpText>Text response for a question. Note that for any question type, a response will be copied as text in this field.</inlineHelpText>
    <label>Answer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>