force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Text_Other1__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Text_Other1__c</fullName>
    <description>This field serves multiple functions based on the type of question asked: For address questions, it stores the street name response. For full name questions, it stores the first name response. For phone number questions, it stores the country code. For currency questions, it stores selected currency code. For Payment Gateway questions, it stores transaction reference id.</description>
    <inlineHelpText>This field serves multiple functions based on the type of question asked: For address questions, it stores the street name response. For full name questions, it stores the first name response. For phone number questions, it stores the country code. For currency questions, it stores selected currency code. For Payment Gateway questions, it stores transaction reference id.</inlineHelpText>
    <label>Answer Text Other1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>