force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Text_Other2__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Text_Other2__c</fullName>
    <description>This field serves multiple functions based on the type of question asked: For Address question, it stores City Name. For Full Name question, it stores Last Name. For Phone Number question, it stores Phone. For Payment Gateway questions, it stores checkout session id.</description>
    <inlineHelpText>This field serves multiple functions based on the type of question asked: For Address question, it stores City Name. For Full Name question, it stores Last Name. For Phone Number question, it stores Phone. For Payment Gateway questions, it stores checkout session id.</inlineHelpText>
    <label>Answer Text Other2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>