force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Text_Other3__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Text_Other3__c</fullName>
    <description>This field serves multiple functions based on the type of question asked: For Address question, it stores Province Name. For Full Name question, it stores Middle Name. For Payment Gateway questions, it stores payment intent id for Stripe and transaction Id for PayPal.</description>
    <inlineHelpText>This field serves multiple functions based on the type of question asked: For Address question, it stores Province Name. For Full Name question, it stores Middle Name. For Payment Gateway questions, it stores payment intent id for Stripe and transaction Id for PayPal.</inlineHelpText>
    <label>Answer Text Other3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>