force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Text_Short__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Text_Short__c</fullName>
    <description>This field contains the first 255 characters of the answer text. This field can be used for history tracking.</description>
    <inlineHelpText>This field contains the first 255 characters of the answer text. This field can be used for history tracking.</inlineHelpText>
    <label>Answer Text Short</label>
    <type>TextArea</type>
</CustomField>