force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_URL__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_URL__c</fullName>
    <description>URL response for questions.</description>
    <inlineHelpText>URL response for a question.</inlineHelpText>
    <label>Answer URL</label>
    <type>Url</type>
</CustomField>