force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Value__c</fullName>
    <description>Selected answer choice value.</description>
    <inlineHelpText>Selected answer choice value.</inlineHelpText>
    <label>Answer Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>