force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answer_Value_Short__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answer_Value_Short__c</fullName>
    <description>This field contains the first 255 characters of the answer value. This field can be used for survey metrics for SF Data Picklist value.</description>
    <inlineHelpText>This field contains the first 255 characters of the answer value. This field can be used for survey metrics chart.</inlineHelpText>
    <label>Answer Value Short</label>
    <type>TextArea</type>
</CustomField>