force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Answered__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that response has been provided for this question.</description>
    <inlineHelpText>If checked, the question is responded.</inlineHelpText>
    <label>Answered</label>
    <type>Checkbox</type>
</CustomField>