force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Comment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Comment__c</fullName>
    <description>Comment entered as part of question response.</description>
    <inlineHelpText>Comment entered as part of question response.</inlineHelpText>
    <label>Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>