force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Flag__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Flag__c</fullName>
    <description>This indicates the flag value for the question, which is set by the reviewer.</description>
    <inlineHelpText>Indicate the Flag for the question.</inlineHelpText>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Need more information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>