force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Internal_Comment__c</fullName>
    <description>Internal comment for a question response.</description>
    <inlineHelpText>Internal comment for a question response.</inlineHelpText>
    <label>Internal comment</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>