force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Is_Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Is_Correct_Answer__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <description>Indicates if the answer for the question is correct.</description>
    <inlineHelpText>Indicates if the answer for the question is correct.</inlineHelpText>
    <label>Is Correct Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>