force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Is_Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Is_Dependent_Question__c</fullName>
    <description>If checked, indicates that this question is displayed/hidden based on the response to another question.</description>
    <formula>ArdiraSurvey__Question__r.ArdiraSurvey__Is_Dependent_Question__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, indicates that this question is displayed/hidden based on the response to another question.</inlineHelpText>
    <label>Is Dependent Question</label>
    <type>Checkbox</type>
</CustomField>