force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Max_Score_Raw__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Max_Score_Raw__c</fullName>
    <description>Maximum possible raw score for this question.</description>
    <inlineHelpText>Maximum possible raw score for this question.</inlineHelpText>
    <label>Max Score (Raw)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>