force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Merged_Question_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Merged_Question_Text__c</fullName>
    <description>To store merged question text.</description>
    <inlineHelpText>Generated question text after applying merged fields.</inlineHelpText>
    <label>Merged Question Text</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>