force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Previous_Response_Info__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Previous_Response_Info__c</fullName>
    <description>This field is used to store previous responses of the participant.</description>
    <inlineHelpText>This field is used to store previous responses of the participant.</inlineHelpText>
    <label>Previous Response Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>