force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Result of this question.</description>
    <inlineHelpText>Result of this question.</inlineHelpText>
    <label>Question</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Question Results</relationshipLabel>
    <relationshipName>Question_Results</relationshipName>
    <type>Lookup</type>
</CustomField>