force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Question_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Display_Order__c</fullName>
    <description>Order in which this question is displayed in a Survey Result. This is a concatenation of the section display order and this questions display order. A typical value will be concatenation of two three character strings (005 002). One representing the display order of section and other representing the display order of the question itself.</description>
    <formula>ArdiraSurvey__Question__r.ArdiraSurvey__Survey_Display_Order__c</formula>
    <inlineHelpText>Order in which this question is displayed in a Survey Result. This is a concatenation of the section display order and this question display order.</inlineHelpText>
    <label>Question Display Order</label>
    <type>Text</type>
</CustomField>