force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Question_Is_Main_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Is_Main_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Question Is Main Question</label>
    <type>Checkbox</type>
</CustomField>