force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Question_Response_Error__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Response_Error__c</fullName>
    <description>Error encountered when collecting a question response.</description>
    <inlineHelpText>Error encountered when collecting a question response.</inlineHelpText>
    <label>Question Response Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>