force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Question_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Question_Text__c</fullName>
    <description>Question text (limited to first 220 characters)</description>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; ArdiraSurvey__Question__r.Id, 
    BLANKVALUE(ArdiraSurvey__Question__r.ArdiraSurvey__Question_Short_Text__c, &quot;None&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Question text (limited to first 220 characters)</inlineHelpText>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>