force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Randomly_Excluded__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Randomly_Excluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a subset of questions selection is enabled by setting a limit, if a question is removed from the presented questions for a respondent, this flag will be set to true.</description>
    <inlineHelpText>When a subset of questions selection is enabled by setting a limit, if a question is removed from the presented questions for a respondent, this flag will be set to true.</inlineHelpText>
    <label>Randomly Excluded</label>
    <type>Checkbox</type>
</CustomField>