force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Repeat_Position__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Repeat_Position__c</fullName>
    <defaultValue>&quot;001&quot;</defaultValue>
    <description>Represents the repeat position of this question result if it has been created as part of repeating questions of a section.</description>
    <inlineHelpText>Represents the repeat position of this question result if it has been created as part of repeating questions of a section.</inlineHelpText>
    <label>Repeat Position</label>
    <length>32</length>
    <type>Text</type>
</CustomField>