force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Report_Attached_Files__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Report_Attached_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field that can be used to show/hide attached files in the survey result view response / report page.</description>
    <inlineHelpText>A field that can be used to show/hide attached files in the survey result view response / report page.</inlineHelpText>
    <label>Report Attached Files</label>
    <type>Checkbox</type>
</CustomField>