force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Response_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Response_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that response is not required for this question. Typically set when questions are skipped based on question dependency configuration.</description>
    <inlineHelpText>If checked, the question response is not required. Typically set when a question is skipped based on question dependency logic rule.</inlineHelpText>
    <label>Response Not Required</label>
    <type>Checkbox</type>
</CustomField>