force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Result_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Result_JSON__c</fullName>
    <description>This field retains the unprocessed response received from external integrations, such as results from a sentiment analysis provider.</description>
    <inlineHelpText>This field retains the unprocessed response received from external integrations, such as results from a sentiment analysis provider.</inlineHelpText>
    <label>Result JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>