force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Reverse_Mapping_Applied__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Reverse_Mapping_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, it indicates that the question result was updated by reverse mapping rule.</description>
    <inlineHelpText>When checked, it indicates that the question result was updated by reverse mapping rule.</inlineHelpText>
    <label>Reverse Mapping Applied</label>
    <type>Checkbox</type>
</CustomField>