force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Reviewer_Comment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Reviewer_Comment__c</fullName>
    <description>Reviewer‌ ‌Comment for a question response.</description>
    <inlineHelpText>Reviewer‌ ‌Comment for a question response.</inlineHelpText>
    <label>Reviewer‌ ‌Comment</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>