force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Score_Colored_Bar_Value__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Colored_Bar_Value__c</fullName>
    <description>Score level for the Question Response.</description>
    <inlineHelpText>Score level for the Question Response.</inlineHelpText>
    <label>Score Colored Bar</label>
    <length>4096</length>
    <type>Html</type>
</CustomField>