force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Score_Level_Report__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Level_Report__c</fullName>
    <description>Question score level. This picklist will have the same values as the Score Level field. Added to make it easier to set the chart colors.</description>
    <inlineHelpText>Question score level, field created for reporting purpose for coloring choices in charts. Score level field value is copied here.</inlineHelpText>
    <label>Score Level (Report)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Low</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>Not Scored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>