force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Percentage__c</fullName>
    <description>Question score based on user responses. Normalized to be between 0 and 100.</description>
    <inlineHelpText>Question percentage score (0-100) based on user response.</inlineHelpText>
    <label>Score (Percentage)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>