force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Score_Raw__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Raw__c</fullName>
    <description>Question score based on user responses.</description>
    <inlineHelpText>Question raw score based on user response.</inlineHelpText>
    <label>Score (Raw)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>