force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Sentiment__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Sentiment__c</fullName>
    <description>Sentiment derived from analyzing the response to the question.</description>
    <inlineHelpText>Sentiment derived from analyzing the response to the question.</inlineHelpText>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>