force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Sentiment_Score__c</fullName>
    <description>Sentiment score corresponding to the derived sentiment.</description>
    <inlineHelpText>Sentiment score corresponding to the derived sentiment.</inlineHelpText>
    <label>Sentiment Score</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>