force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Signature_Answer__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Signature_Answer__c</fullName>
    <description>This field is storing signature question results in base64 format.</description>
    <inlineHelpText>Signature question results in base64 format.</inlineHelpText>
    <label>Signature Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>