force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Question result of this survey.</description>
    <inlineHelpText>Question result of this survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Question Results</relationshipLabel>
    <relationshipName>Question_Results</relationshipName>
    <type>Lookup</type>
</CustomField>