force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Survey_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result__c</fullName>
    <description>Question result is part of this survey result.</description>
    <inlineHelpText>Question result is part of this survey result.</inlineHelpText>
    <label>Survey Result</label>
    <referenceTo>ArdiraSurvey__Survey_Result__c</referenceTo>
    <relationshipLabel>Question Results</relationshipLabel>
    <relationshipName>Question_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>