force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Unique_Value__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Unique_Value__c</fullName>
    <description>Used to avoid duplicate reservation of appointment slots.</description>
    <inlineHelpText>A unique value to prevent duplicate reservation of appointment slots.</inlineHelpText>
    <label>Unique Value</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>