force-app/main/default/objects/ArdiraSurvey__Question_Result__c/fields/ArdiraSurvey__Uploaded_File_Names__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Uploaded_File_Names__c</fullName>
    <description>This field contains a comma separated list of file names uploaded as part of the question response. This field can be used for history tracking.</description>
    <inlineHelpText>This field contains a comma separated list of file names uploaded as part of the question response. This field can be used for history tracking.</inlineHelpText>
    <label>Uploaded File Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>